[SD-674] Implement -font-color variable

--- a/frontend/app/assets/stylesheets/spree/frontend/application.scss
+++ b/frontend/app/assets/stylesheets/spree/frontend/application.scss
@@ -1,7 +1,6 @@
-@import './variables/variables';
-
 @import './variables/bootstrap-overrides';
 @import './variables/variables';
+@import './variables/helper-variables';
 @import 'bootstrap';
 @import './bootstrap-patches';
 
