[SD-669] Implement $header-background-color variable

--- a/frontend/app/views/spree/shared/_checkout_header.html.erb
+++ b/frontend/app/views/spree/shared/_checkout_header.html.erb
@@ -1,5 +1,5 @@
 <div id="spree-header">
-  <header id="header" class="d-flex align-items-center bg-white header-spree border-bottom">
+  <header id="header" class="d-flex align-items-center header-spree border-bottom">
     <div class="container position-relative">
       <div class="position-absolute checkout-header-link">
         <%= icon(name: 'arrow-right',
