--- a/frontend/app/views/spree/shared/_header.html.erb
+++ b/frontend/app/views/spree/shared/_header.html.erb
@@ -1,6 +1,6 @@
 <%# leaving #spree-header div for legacy support  %>
 <div id="spree-header">
-  <header id="header" class="d-flex align-items-center bg-white header-spree border-bottom" data-hook>
+  <header id="header" class="d-flex align-items-center header-spree border-bottom" data-hook>
     <div class="container-fluid h-100 header-spree-fluid">
       <div class="d-flex flex-nowrap align-items-center h-100">
         <div class="d-xl-none flex-grow-1 header-spree-fluid-mobile-menu-toggler">
