[SD-671] Adds SASS variable for meganav background color

--- a/frontend/app/assets/stylesheets/spree/frontend/views/spree/shared/main_nav_bar.scss
+++ b/frontend/app/assets/stylesheets/spree/frontend/views/spree/shared/main_nav_bar.scss
@@ -65,7 +65,7 @@
       border: none;
       z-index: 1000;
       display: none;
-      background-color: theme-color('light-background');
+      background: $meganav-background;
       background-clip: padding-box;
 
       form {
