--- a/frontend/app/assets/stylesheets/spree/frontend/variables/variables.scss
+++ b/frontend/app/assets/stylesheets/spree/frontend/variables/variables.scss
@@ -2,6 +2,7 @@ $primary-background: #ffffff;
 $font-color: black;
 $footer-background: $primary-background;
 $footer-font-color: $font-color;
+$header-font-color: $font-color;
 $spree-header-max-width: 1440px;
 $spree-header-mobile-height: 50px;
 $spree-header-tablet-height: 75px;
