--- a/frontend/app/assets/stylesheets/spree/frontend/variables/variables.scss
+++ b/frontend/app/assets/stylesheets/spree/frontend/variables/variables.scss
@@ -3,6 +3,7 @@ $font-color: black;
 $footer-background: $primary-background;
 $footer-font-color: $font-color;
 $header-font-color: $font-color;
+$meganav-font-color: $header-font-color;
 $spree-header-max-width: 1440px;
 $spree-header-mobile-height: 50px;
 $spree-header-tablet-height: 75px;
