[SD-673] Implement -background variable

--- a/frontend/app/assets/stylesheets/spree/frontend/views/spree/shared/footer.scss
+++ b/frontend/app/assets/stylesheets/spree/frontend/views/spree/shared/footer.scss
@@ -1,5 +1,5 @@
 .footer-spree {
-  background-color: $footer-background;
+  background: $footer-background;
   color: $footer-font-color;
   .logo img {
     height: 27px;
