[SD-670] Implement header-font-color variable

--- a/frontend/app/assets/stylesheets/spree/frontend/variables/variables.scss
+++ b/frontend/app/assets/stylesheets/spree/frontend/variables/variables.scss
@@ -1,11 +1,11 @@
 $primary-background: #ffffff;
 $font-color: black;
-$footer-background: $primary-background;
-$footer-font-color: $font-color;
-$meganav-background: $primary-background;
-$header-background: $primary-background;
 $header-font-color: $font-color;
-$meganav-font-color: $header-font-color;
+$header-background: $primary-background;
+$meganav-font-color: $font-color;
+$meganav-background: $primary-background;
+$footer-font-color: $font-color;
+$footer-background: $primary-background;
 $spree-header-max-width: 1440px;
 $spree-header-mobile-height: 50px;
 $spree-header-tablet-height: 75px;
