--- a/frontend/app/assets/stylesheets/spree/frontend/views/spree/shared/header.scss
+++ b/frontend/app/assets/stylesheets/spree/frontend/views/spree/shared/header.scss
@@ -40,6 +40,9 @@ body {
     }
     &-mobile-menu-toggler {
       flex-basis: 0;
+      .navbar-toggler {
+        color: $header-font-color;
+      }
     }
   }
   @include media-breakpoint-up(sm) {
