--- a/frontend/app/assets/stylesheets/spree/frontend/views/spree/shared/nav_bar.scss
+++ b/frontend/app/assets/stylesheets/spree/frontend/views/spree/shared/nav_bar.scss
@@ -13,6 +13,7 @@
       border: none;
       padding: 0;
       margin: 0;
+      color: $header-font-color;
       &:focus {
         outline: none;
       }
