--- a/frontend/app/assets/stylesheets/spree/frontend/views/spree/layouts/spree_application.scss
+++ b/frontend/app/assets/stylesheets/spree/frontend/views/spree/layouts/spree_application.scss
@@ -1,3 +1,9 @@
+body {
+  background: $primary-background;
+}
+.modal-content {
+  background: $primary-background;
+}
 .overlay {
   position: fixed;
   visibility: hidden;
