--- a/frontend/app/assets/stylesheets/spree/frontend/views/spree/orders/edit.scss
+++ b/frontend/app/assets/stylesheets/spree/frontend/views/spree/orders/edit.scss
@@ -190,6 +190,7 @@
         float: none;
       }
       input {
+        background: $primary-background;
         padding: 0;
         width: 40px;
         height: 25px;
