[SD-677] Implement $secondary-background variable

--- a/frontend/app/assets/stylesheets/spree/frontend/variables/variables.scss
+++ b/frontend/app/assets/stylesheets/spree/frontend/variables/variables.scss
@@ -1,4 +1,5 @@
 $primary-background: #ffffff;
+$secondary-background: #f2f2f2;
 $font-color: black;
 $header-font-color: $font-color;
 $header-background: $primary-background;
