--- a/frontend/app/assets/stylesheets/spree/frontend/views/spree/checkout/edit.scss
+++ b/frontend/app/assets/stylesheets/spree/frontend/views/spree/checkout/edit.scss
@@ -355,7 +355,7 @@
     &-summary {
       padding: 25px 46px;
       margin-bottom: 30px;
-      background-color: theme-color('image-background');
+      background: $secondary-background;
       @include media-breakpoint-up(sm) {
         padding: 70px 120px;
       }
