--- a/frontend/app/assets/stylesheets/spree/frontend/views/spree/orders/show.scss
+++ b/frontend/app/assets/stylesheets/spree/frontend/views/spree/orders/show.scss
@@ -108,8 +108,8 @@
         justify-content: space-between;
         grid-template: fit-content(1fr) fit-content(1fr) 12px 1fit-content(1fr)/ 1fr;
         grid-template-areas: 'n'
+        's'
         'p'
-        '.'
         'q';
 
         @include media-breakpoint-up(sm) {
@@ -137,8 +137,19 @@
 
         &-subtitle {
           grid-area: s;
+          font-size: font-px-to-rem(12px);
+          @include media-breakpoint-down(lg) {
+            ul {
+              li {
+                display: inline;
+                &:not(:last-child):after {
+                  content: ', ';
+                }
+              }
+            }
+          }
           @include media-breakpoint-up(sm) {
-            font-size: font-px-to-rem(14px);
+            font-size: font-px-to-rem(22px);
           }
           @include media-breakpoint-up(lg) {
             font-size: font-px-to-rem(18px);
