--- a/frontend/app/assets/stylesheets/spree/frontend/variables/variables.scss
+++ b/frontend/app/assets/stylesheets/spree/frontend/variables/variables.scss
@@ -1,6 +1,7 @@
 $primary-background: #ffffff;
 $secondary-background: #f2f2f2;
 $font-color: black;
+$font-family: 'Montserrat', sans-serif;
 $header-font-color: $font-color;
 $header-background: $primary-background;
 $meganav-font-color: $font-color;
