[SD-677] use $secondary-background on dropdowns and arrows on carousels

--- a/frontend/app/assets/stylesheets/spree/frontend/views/spree/shared/carousel/single.scss
+++ b/frontend/app/assets/stylesheets/spree/frontend/views/spree/shared/carousel/single.scss
@@ -32,7 +32,7 @@
       border-radius: 50%;
       width: $size;
       height: $size;
-      background: theme-color("light");
+      background: $secondary-background;
     }
   }
   &-item {
