--- a/frontend/app/assets/stylesheets/spree/frontend/components-bootstrap/carousel.scss
+++ b/frontend/app/assets/stylesheets/spree/frontend/components-bootstrap/carousel.scss
@@ -47,7 +47,7 @@
         border-radius: 50%;
         width: $size;
         height: $size;
-        background: theme-color("light");
+        background: $secondary-background;
       }
       &--previous {
         left: 15px;
