[SD-676] set $primary-background for dropdown-menu

--- a/frontend/app/assets/stylesheets/spree/frontend/views/spree/layouts/spree_application.scss
+++ b/frontend/app/assets/stylesheets/spree/frontend/views/spree/layouts/spree_application.scss
@@ -24,8 +24,12 @@ body {
   }
 }
 
-.dropdown-item {
-  &:hover, &:focus {
-    background: $secondary-background;
+
+.dropdown-menu {
+  background: $primary-background;
+  .dropdown-item {
+    &:hover, &:focus {
+      background: $secondary-background;
+    }
   }
 }
