--- a/frontend/app/assets/stylesheets/spree/frontend/views/spree/taxons/show.scss
+++ b/frontend/app/assets/stylesheets/spree/frontend/views/spree/taxons/show.scss
@@ -29,6 +29,7 @@
       position: sticky;
       top: $spree-header-mobile-height;
       z-index: 2;
+      background: $primary-background;
       @include media-breakpoint-up(sm) {
         top: $spree-header-tablet-height;
       }
