--- a/frontend/app/views/spree/shared/_login.html.erb
+++ b/frontend/app/views/spree/shared/_login.html.erb
@@ -13,7 +13,7 @@
         </p>
       </div>
     </div>
-    <div class="spree-checkbox-container mt-4 mt-sm-5 mt-md-4 spree-mb-medium">
+    <div class="spree-checkbox-container mt-4 mt-sm-5 mt-lg-4 spree-mb-medium">
       <div class="spree-checkbox">
         <%= f.check_box :remember_me, tabindex: 3 %>
         <%= f.label :remember_me, '' %>
