--- a/frontend/app/assets/stylesheets/spree/frontend/views/spree/shared/nav_bar.scss
+++ b/frontend/app/assets/stylesheets/spree/frontend/views/spree/shared/nav_bar.scss
@@ -43,7 +43,7 @@
       form {
         input#keywords{
           background: transparent;
-          color: theme-color("dark-text");
+          color: $meganav-font-color;
           font-size: font-px-to-rem(14px);
           width: calc(100% - 40px);
           &:focus {
