--- a/frontend/app/views/spree/products/_filters_mobile.html.erb
+++ b/frontend/app/views/spree/products/_filters_mobile.html.erb
@@ -1,6 +1,6 @@
 <% is_visible = params[:menu_open] ? 'block' : 'none' %>
 
-<% cache base_cache_key + [@option_types, permitted_params, @taxon, is_visible] do %>
+<% cache base_cache_key + [available_option_types, permitted_params, @taxon, is_visible] do %>
   <div id="filter-by-overlay" class="d-lg-none plp-overlay" style="display: <%= is_visible %>;">
     <div class="plp-scroll">
       <div class="container">
@@ -10,7 +10,7 @@
         </div>
       </div>
       <div id="filters-accordion">
-        <% @option_types.each do |option_type| %>
+        <% available_option_types.each do |option_type| %>
           <% option_type_name = option_type.presentation.titleize.gsub(' ', '') %>
           <% ot_downcase_name = option_type_name.downcase %>
 
