Only fetch Cart when needed

--- a/frontend/app/views/spree/shared/_nav_bar.html.erb
+++ b/frontend/app/views/spree/shared/_nav_bar.html.erb
@@ -38,7 +38,7 @@
       </div>
     </li>
   <% end %>
-  <li id="link-to-cart" data-hook>
+  <li id="link-to-cart" data-turbolinks-permanent>
     <span class="d-none d-xl-inline-block cart-icon--xl">
       <%= icon(name: 'bag',
                width: 41.8,
