Fetch account and api tokens only when necessary

--- a/frontend/app/views/spree/shared/_nav_bar.html.erb
+++ b/frontend/app/views/spree/shared/_nav_bar.html.erb
@@ -33,7 +33,7 @@
                   height: 24)  %>
         </button>
 
-        <div id="link-to-account" class="dropdown-menu dropdown-menu-right text-right">
+        <div id="link-to-account" class="dropdown-menu dropdown-menu-right text-right" data-turbolinks-permanent>
         </div>
       </div>
     </li>
