--- a/frontend/app/views/spree/shared/_link_to_account.html.erb
+++ b/frontend/app/views/spree/shared/_link_to_account.html.erb
@@ -1,6 +1,6 @@
 <% if try_spree_current_user %>
   <%= link_to Spree.t('nav_bar.my_account'), spree.account_path, class: 'dropdown-item' if spree.respond_to?(:account_path) %>
-  <%= link_to Spree.t('nav_bar.log_out'), spree.logout_path, class: 'dropdown-item' if spree.respond_to?(:logout_path) %>
+  <%= link_to Spree.t('nav_bar.log_out'), spree.logout_path, class: 'dropdown-item', method: :get if spree.respond_to?(:logout_path) %>
 <% else %>
   <%= link_to Spree.t('nav_bar.log_in'), spree.login_path, class: 'dropdown-item' if spree.respond_to?(:login_path) %>
   <%= link_to Spree.t('nav_bar.sign_up'), spree.signup_path, class: 'dropdown-item' if spree.respond_to?(:signup_path) %>
