--- a/frontend/app/assets/stylesheets/spree/frontend/views/spree/checkout/confirm.scss
+++ b/frontend/app/assets/stylesheets/spree/frontend/views/spree/checkout/confirm.scss
@@ -1,126 +1,199 @@
 .checkout-confirm {
-  $last_3_table_cols: repeat(3, .5fr);
-
   display: flex;
   flex-direction: column;
 
-  dt {
+  &-order-details {
+    padding-bottom: 40px;
     font-weight: 500;
-    text-transform: uppercase;
-    padding: 10px 0;
-  }
 
-  &-products {
-    @include media-breakpoint-down(lg) {
-      .checkout-confirm-th {
-        display: none;
-      }
-    }
-    @include media-breakpoint-up(lg) {
-      order: 1;
-      display: grid;
-      grid-template-columns: .75fr 1fr $last_3_table_cols;
-
-      & > span:first-child {
-        grid-column: span 2;
-      }
-    }
-  }
-  &-product {
-    display: flex;
-    border-top: 1px solid theme-color('borders');
-    padding: 10px 0;
-
-    &:last-child {
-      border-bottom: 1px solid theme-color('borders');
-    }
-
-    a {
-      width: 21%;
-
+    dd {
+      font-size: font-px-to-rem(14px);
       @include media-breakpoint-up(sm) {
-        width: 206px;
+        padding-bottom: 0px;
+        margin-bottom: 60px;
+        font-size: font-px-to-rem(27px);
       }
-
-      img {
-        width: 100%;
-      }
-    }
-
-    &-desc {
-      margin-left: 15px;
-      display: flex;
-      flex-direction: column;
-      padding: 10px 0;
-
-      div {
-        padding: 0;
-      }
-
-      @include media-breakpoint-up(sm) {
-        padding: 0;
-      }
-
       @include media-breakpoint-up(lg) {
-        grid-column: span 4;
-        display: grid;
-        grid-template-columns: 1fr $last_3_table_cols;
-        grid-auto-rows: 250px;
-        margin: 0;
-        align-items: center;
+        font-size: font-px-to-rem(18px);
       }
     }
 
-    &-price {
-      font-weight: bold;
-    }
-
-    @include media-breakpoint-up(sm) {
-      padding: 39px 0;
-      font-size: font-px-to-rem(27px);
-      &-qty {
-        flex: 1;
-        display: flex;
-        align-items: flex-end;
+    dt {
+      font-weight: 500;
+      @include media-breakpoint-up(sm) {
+        padding: 0;
+        margin-bottom: 32px;
+        font-size: font-px-to-rem(30px);
+      }
+      @include media-breakpoint-up(lg) {
+        font-size: font-px-to-rem(22px);
       }
     }
 
-    @include media-breakpoint-down(lg) {
-      &-total {
-        display: none;
-      }
-    }
-
-    @include media-breakpoint-up(lg) {
-      grid-column: span 5;
-      display: grid;
-      grid-template-columns: .75fr 1fr $last_3_table_cols;
-      grid-column-gap: 10px;
-      align-items: center;
-      font-size: 26px;
-
-      &-qty > span:first-child {
-        display: none;
+    &-line-items {
+      @include media-breakpoint-up(lg) {
+        border: none;
+        flex: 1 1 0;
       }
 
-      a {
-        width: 100%;
+      &-header {
+        font-size: font-px-to-rem(27px);
+      }
+
+      &-line-item {
+        $self: &;
+
+        a {
+          max-width: 50%;
+          margin-right: 20px;
+
+          @include media-breakpoint-up(lg) {
+            margin-right: 40px;
+          }
+        }
+
+        img {
+          width: 90px;
+          height: auto;
+
+          @include media-breakpoint-up(sm) {
+            width: 206px;
+          }
+
+          @include media-breakpoint-up(lg) {
+            width: 255px;
+          }
+        }
+
+        &-name {
+          font-size: font-px-to-rem(14px);
+          border-top: 1px solid $global-border-style;
+
+          @include media-breakpoint-up(sm) {
+            font-size: font-px-to-rem(27px);
+          }
+
+          @include media-breakpoint-up(lg) {
+            font-size: font-px-to-rem(22px);
+            width: 55%;
+          }
+
+          &-options {
+            font-size: font-px-to-rem(12px);
+            @include media-breakpoint-down(lg) {
+              li {
+                display: inline;
+                &:not(:last-child):after {
+                  content: ', ';
+                }
+              }
+            }
+            @include media-breakpoint-up(sm) {
+              font-size: font-px-to-rem(22px);
+            }
+            @include media-breakpoint-up(lg) {
+              font-size: font-px-to-rem(18px);
+            }
+          }
+        }
+
+        &-subtitle {
+          font-size: font-px-to-rem(12px);
+          @include media-breakpoint-down(lg) {
+            ul {
+              li {
+                display: inline;
+                &:not(:last-child):after {
+                  content: ', ';
+                }
+              }
+            }
+          }
+          @include media-breakpoint-up(sm) {
+            font-size: font-px-to-rem(22px);
+          }
+          @include media-breakpoint-up(lg) {
+            font-size: font-px-to-rem(18px);
+          }
+        }
+
+        &-price {
+          font-size: font-px-to-rem(14px);
+          border-top: 1px solid $global-border-style;
+
+          @include media-breakpoint-up(sm) {
+            font-size: font-px-to-rem(27px);
+            margin-bottom: auto;
+          }
+          @include media-breakpoint-up(lg) {
+            font-size: font-px-to-rem(22px);
+          }
+          div:last-child {
+            @include media-breakpoint-up(lg) {
+              font-size: font-px-to-rem(22px);
+            }
+          }
+        }
+
+        &-quantity {
+          font-size: font-px-to-rem(14px);
+          border-top: 1px solid $global-border-style;
+
+          @include media-breakpoint-up(sm) {
+            font-size: font-px-to-rem(27px);
+          }
+          @include media-breakpoint-up(lg) {
+            font-size: font-px-to-rem(20px);
+          }
+
+          span {
+            @include media-breakpoint-up(lg) {
+              font-size: font-px-to-rem(22px);
+              margin-left: 30px;
+            }
+          }
+        }
+
+        &-total {
+          border-top: 1px solid $global-border-style;
+          @include media-breakpoint-up(lg) {
+            font-size: font-px-to-rem(20px);
+          }
+          div:last-child {
+            @include media-breakpoint-up(lg) {
+              font-size: font-px-to-rem(22px);
+            }
+          }
+        }
+
+        &-check-mark {
+          padding-bottom: 25px;
+        }
+
+        &:last-child {
+          #{$self}-name, #{$self}-price, #{$self}-quantity, #{$self}-total {
+            border-bottom: 1px solid $global-border-style;
+          }
+        }
       }
     }
   }
 
   &-delivery-informations {
-    border-bottom: 1px solid theme-color('borders');
+    border-bottom: 1px solid $global-border-style;
     font-weight: 500;
 
     &-header {
       letter-spacing: 0.4px;
+      margin-bottom: 20px;
     }
     dt {
       letter-spacing: 0.4px;
+      margin-bottom: 15px;
     }
     dd {
       letter-spacing: 0.35px;
+      margin-bottom: 25px;
     }
 
     &-link {
@@ -166,6 +239,17 @@
         font-size: font-px-to-rem(18px);
         letter-spacing: 0.45px;
       }
+    }
+  }
+
+  #checkout-summary {
+    margin-top: 20px;
+    @include media-breakpoint-up(sm) {
+      margin-top: 70px;
+    }
+    @include media-breakpoint-up(lg) {
+      flex: 0 0 40%;
+      align-self: flex-start;
     }
   }
 }
