[SD-676] Fixes svg helper

--- a/frontend/app/views/spree/shared/_mobile_navigation.html.erb
+++ b/frontend/app/views/spree/shared/_mobile_navigation.html.erb
@@ -1,5 +1,5 @@
 <div class="position-fixed text-uppercase d-xl-none mobile-navigation">
-  <div class="d-flex align-items-center bg-white header-spree" data-hook>
+  <div class="d-flex align-items-center header-spree" data-hook>
     <div class="container-fluid header-spree-fluid">
       <div class="d-flex flex-nowrap align-items-center">
         <div class="d-xl-none flex-grow-1">
