--- a/frontend/app/assets/stylesheets/spree/frontend/variables/variables.scss
+++ b/frontend/app/assets/stylesheets/spree/frontend/variables/variables.scss
@@ -1,5 +1,6 @@
 $primary-background: #ffffff;
 $secondary-background: #f2f2f2;
+$input-background: #ffffff;
 $font-color: black;
 $font-family: 'Montserrat', sans-serif;
 $header-font-color: $font-color;
